hphp/test/slow/object_property/711.php.expectf

Warning: Attempt to assign property of non-object in %s/test/slow/object_property/711.php on line 4
NULL

Warning: Attempt to assign property of non-object in %s/test/slow/object_property/711.php on line 4
NULL

Fatal error: Cannot access empty property in %s/test/slow/object_property/711.php on line 4
